--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
             <ul>
                 <li class="slide-out"><a class="slide-btn" href="#">Google Maps <i class="fa fa-chevron-right" aria-hidden="true" style="font-size: 16px; padding-left: 5px;"></i></a>
                     <ul class="step-menu">
-                        <li><a href="#google-maps-step-01">Step 01</a></li>
-                        <li><a href="#google-maps-step-02">Step 02</a></li>
-                        <li><a href="#google-maps-step-03">Step 03</a></li>
+                        <li><a class="step-01" href="#google-maps-step-01">Step 01</a></li>
+                        <li><a class="step-02" href="#google-maps-step-02">Step 02</a></li>
+                        <li><a class="step-03" href="#google-maps-step-03">Step 03</a></li>
                     </ul>
                 </li>    
-                <li><a href="#">Tutorial 02</a></li>
-                <li><a href="#">Tutorial 03</a></li>
+                <li><a href="tutorial-02.html">slide show</a></li>
+                <li><a href="tutorial-03.html">Tutorial 03</a></li>
             </ul>
-        </nav>   
+        </nav> 
+<!--        <span id="goto">&nbsp;</span>-->
     </header> <!-- end header -->
     
     <main>
