--- a/tutorial-03.html
+++ b/tutorial-03.html
@@ -22,8 +22,8 @@
         <h1>JAVASCRIPT / JQUERY</h1>
         <nav class="site-nav-bar">
             <ul>
-                <li><a href="#">Google Maps</a></li>    
-                <li><a href="#">Slide Show</a></li>
+                <li><a href="index.html">Google Maps</a></li>    
+                <li><a href="tutorial-02.html">Slide Show</a></li>
                 <li class="slide-out"><a class="slide-btn" href="#">Tutorial 03<i class="fa fa-chevron-right" aria-hidden="true" style="font-size: 16px; padding-left: 5px;"></i></a>
                     <ul class="step-menu">
                         <li><a href="#">Step 01</a></li>
@@ -41,7 +41,7 @@
                 <h1>DEMO</h1>
                 <h2>click anywhere in the green box to move the cactus.</h2>
                 
-                <div id="cactus"></div>
+                <div id="cactus" class="cactus-transform"></div>
                 
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
         </section>    
